# SoCSIM

./: .gitignore  .travis.yml  CMakeLists.txt  FreeRTOSConfig.h  Makefile  README.md  imgui.ini  main.c
GUI/: BSP.cpp  BSP.h  GUI.cpp  GUI.h  HAL.cpp  HAL.h  Memory.cpp  Memory.h  SoC.cpp  SoC.h  drivers.h  gui  imgui.ini  imgui_demo.cpp
SIM/: GUI.cpp  GUI.h  HAL.cpp  HAL.h  Memory.cpp  Memory.h  SoC.cpp  SoC.h  UART.cpp  UART.h  drivers.c  drivers.cpp  drivers.h
doc/: Doxygen  SoCSIM.doxygen
